# URL_Shortner_AI_Assisted_SDLC

./: .gitattributes  .gitignore  EXPLANATION_FOR_DEMO.md  README.md
ai_assisted_shortener/: .env.example  README.md  pyproject.toml  requirements.txt
ai_assisted_shortener/app/: ai_assist.py  codegen.py  config.py  database.py  engineering.py  implementation.py  main.py  quality.py  schemas.py  url_service.py
ai_assisted_shortener/app/static/: app.js  index.html  styles.css
ai_assisted_shortener/docs/: ARCHITECTURE.md  COMPLIANCE_MATRIX.md  DELIVERABLES.md  SCENARIOS.md  TESTING.md
ai_assisted_shortener/tests/: test_api.py  test_url_service.py
app/: config.py  main.py  models.py
combined/: .env.example  .gitignore  README_COMBINED.md  pyproject.toml  requirements.txt  run.py
combined/app/: audit.py  change_executor.py  database.py  main.py  models.py  orchestrator.py  reports.py
combined/app/static/: app.js  docs-readme.html  index.html  styles.css
combined/docs/: ARCHITECTURE.md  SCENARIOS.md
combined/tests/: test_api.py  test_change_executor.py  test_url_service.py
docs/: index.html
tests/: test_api.py  test_orchestrator.py
ui/: README_UI.md  requirements.txt
ui/app/: __init__.py  config.py  llm.py  main.py  url_service.py
ui/app/static/: app.js  index.html
